--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/scrollbar.css" />
-    <title>React App</title>
+    <title>CMMS Uveg</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
